# image_streaming

./: CMakeLists.txt  README.md
include/: common.h
projects/: CMakeLists.txt
projects/isimage/: isimage.cpp  isimage.h
projects/pi_camera_client/: CMakeLists.txt
projects/pi_camera_client/service/: pi_camera_client
projects/pi_camera_client/sources/: camera_client.cpp  camera_client.h  main.cpp  pi_camera.cpp  pi_camera.h
projects/server/: client_hendler.cpp  client_hendler.h  main.cpp  server.cpp  server.h  server.pro  server_storage.cpp  server_storage.h
projects/viewer/: main.cpp  viewer.cpp  viewer.h  viewer.pro  viewer.ui  viewer_client.cpp  viewer_client.h
